# CSVReader

./: CSVReaderErrors.h  TokenStream.cpp  TokenStream.h  _CSVReader.mk  _CSVReader.project  _CSVReader.txt  csvreader.h
Debug/: _CSVReader_CSVStream.cpp.o.d  _CSVReader_TokenStream.cpp.o.d  _CSVReader__test.cpp.o.d
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: CSVReaderErrors.h  CSVStream.h  Errors.h  Token.h  TokenStream.h  _test.h  csvreader.h
src/: CSVStream.cpp  TokenStream.cpp  _test.cpp
test/: CMakeCache.txt  CMakeLists.txt  CSVReaderTest  Makefile  cmake_install.cmake  main.cpp  test.csv  test_bad.csv
